RESOLVED FIXED131949
REGRESSION (r157328): popover to check into flight ba.com dismisses instantly when focusing form
https://bugs.webkit.org/show_bug.cgi?id=131949
Summary REGRESSION (r157328): popover to check into flight ba.com dismisses instantly...
Ryosuke Niwa
Reported 2014-04-21 13:43:38 PDT
Reproduction steps: 1. Go to: <http://www.britishairways.com/travel/home/public/en_us> 2. Mouse over "Manage My Bookin". 3. Try to enter in the fields for "Online check-in" or "Find my booking". Results: It is impossible enter in those fields, the pop-up UI disappears before you start typing. Please see the attached screen capture video.
Attachments
Fixes the bug (15.11 KB, patch)
2014-04-21 22:20 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (448.78 KB, application/zip)
2014-04-21 23:12 PDT, Build Bot
no flags
Patch for landing (26.24 KB, patch)
2014-04-22 15:45 PDT, Ryosuke Niwa
no flags
Patch for landing (23.78 KB, patch)
2014-04-22 15:50 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2014-04-21 22:20:50 PDT
Created attachment 229863 [details] Fixes the bug
Build Bot
Comment 2 2014-04-21 23:12:35 PDT
Comment on attachment 229863 [details] Fixes the bug Attachment 229863 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6027582352916480 New failing tests: fast/events/shadow-event-path.html
Build Bot
Comment 3 2014-04-21 23:12:39 PDT
Created attachment 229864 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Darin Adler
Comment 4 2014-04-22 07:38:18 PDT
Comment on attachment 229863 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=229863&action=review Patch seems fine, but I find the indirect way all this code is written really confusing. The new test seems to be failing on EWS, so please check to be sure that’s resolved before landing. > Source/WebCore/dom/EventDispatcher.cpp:180 > + Node* previousHost = 0; nullptr > Source/WebCore/dom/EventDispatcher.cpp:192 > + return 0; nullptr
Ryosuke Niwa
Comment 5 2014-04-22 15:45:51 PDT
Created attachment 229916 [details] Patch for landing
Ryosuke Niwa
Comment 6 2014-04-22 15:50:27 PDT
Created attachment 229917 [details] Patch for landing
WebKit Commit Bot
Comment 7 2014-04-22 16:26:26 PDT
Comment on attachment 229917 [details] Patch for landing Clearing flags on attachment: 229917 Committed r167689: <http://trac.webkit.org/changeset/167689>
WebKit Commit Bot
Comment 8 2014-04-22 16:26:31 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 9 2014-04-23 21:25:05 PDT
Alexey Proskuryakov
Comment 10 2014-04-25 16:21:41 PDT
This caused bug 132214.
Alexey Proskuryakov
Comment 11 2014-04-25 16:29:50 PDT
(and apparently many more bugs)
Darin Adler
Comment 12 2014-04-27 10:22:10 PDT
(In reply to comment #11) > (and apparently many more bugs) Where can I find out more about the “many more”?
Note You need to log in before you can comment on or make changes to this bug.